--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <img id="img" src="./images/1.jpg" alt="img">
-        <canvas id="canvas" width="300" height="300"></canvas>
+        <canvas style="display: block" id="canvas" width="300" height="300"></canvas>
         <button id="downloadButton">Download img!</button>
     </body>
 </html>
