--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <img id="img" src="./images/1.jpg" alt="img">
+        <img height="350" id="img" src="./images/1.jpg" alt="img">
         <canvas style="display: block" id="canvas" width="300" height="300"></canvas>
         <button id="downloadButton">Download img!</button>
     </body>
